<resources>
    <string name="app_name">Mobilità dipendenti pubblici</string>

    <string name="get_image">Scegli Immagine</string>
    <string name="start">Inizia</string>


    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="btn_send">Invia</string>


    <string name="facebook_app_id">1906024909621141</string>

    <!-- <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="descrizione">Questa app vuole fare incontrare dipendenti pubblici che vogliano scambiarsi la sede di lavoro</string>
    <string name="i_miei_annunci">Le mie destinazioni desiderate</string>
    <string name="crea_annuncio">Inserisci Destinazione Desiderata</string>
    <string name="messaggi">Messaggi</string>
    <string name="invia_nmessaggio">Invia\nMessaggio</string>
    <string name="nascondi">Nascondi</string>
    <string name="questo_a">Questo annuncio corrisponde ai tuoi criteri. Scorri per vedere tutti i dettagli</string>
    <string name="registrazione">Registrazione</string>
    <string name="map">Map</string>
    <string name="chat">Chat</string>
    <string name="cercaqualifica">cercaQualifica</string>
    <string name="cerca_ente">Cerca Ente</string>
    <string name="registra">Registra</string>
    <string name="qualifica">Qualifica</string>
    <string name="registrazione_nuovo_utente">Registrazione nuovo utente</string>
</resources>
