<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66ffff"
    tools:context="com.posvert.mobility.RegistrazioneActivity">

    <LinearLayout


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:orientation="vertical">
        <TextView
            android:text="@string/registrazione_nuovo_utente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            tools:textSize="18sp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="* Username"
                android:maxLines="1"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="* Password"
                android:maxLines="1"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="* Email"
                android:maxLines="1"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Telefono"
                android:maxLines="1"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>




        <LinearLayout

            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"

            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="Regione"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/spinnerRegioni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />


        </LinearLayout>

        <LinearLayout

            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"

            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="Provincia"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/spinnerProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout

            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"

            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="Comune"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/spinnerComuni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ente"
                android:maxLines="1"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/livello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Livello"
                android:maxLines="1"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <include layout="@layout/qualifica"/>


        <LinearLayout

            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"

            android:orientation="horizontal">


            <Button
                android:id="@+id/registra"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/registra"
                android:textAllCaps="false"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF" />

        </LinearLayout>
        <LinearLayout

            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"

            android:orientation="horizontal">


            <Button
                android:id="@+id/cercaEnte"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/cerca_ente"
                android:textAllCaps="false"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
